objects/Revenue_Schedule__c.object
<CustomObject><fields>
        <fullName>Cumulative_Revenue__c</fullName>
        <label>Cumulative Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Revenue_Amount__c</fullName>
        <label>Revenue Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Revenue_Schedule_Date__c</fullName>
        <label>Revenue Schedule Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Revenue_Schedule_Status__c</fullName>
        <label>Revenue Schedule Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Weighted_Revenue_Amount__c</fullName>
        <label>Weighted Revenue Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Revenue Schedule</label><nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Revenue Schedule Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Revenue Schedules</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>